--- a/Modules/Loadable/Transforms/CMakeLists.txt
+++ b/Modules/Loadable/Transforms/CMakeLists.txt
@@ -7,6 +7,7 @@ string(TOUPPER ${MODULE_NAME} MODULE_NAME_UPPER)
 #-----------------------------------------------------------------------------
 add_subdirectory(Logic)
 add_subdirectory(MRMLDM)
+add_subdirectory(VTKWidgets)
 add_subdirectory(Widgets)
 add_subdirectory(SubjectHierarchyPlugins)
 
